--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
-.gitignore
+*.gitignore
+images
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
