--- a/DTP.csproj
+++ b/DTP.csproj
@@ -7,6 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\images\clarity.png" />
+    <None Include="wwwroot\images\cx.png" />
+    <None Include="wwwroot\images\datafone.png" />
+    <None Include="wwwroot\images\dego.png" />
+    <None Include="wwwroot\images\dipd.png" />
+    <None Include="wwwroot\images\edoc.png" />
+    <None Include="wwwroot\images\kb4.png" />
+    <None Include="wwwroot\images\logo.png" />
+    <None Include="wwwroot\images\logo_com_robo_cliente_v2.png" />
+    <None Include="wwwroot\images\owa.png" />
+    <None Include="wwwroot\images\placeholder.png" />
+    <None Include="wwwroot\images\pronto.png" />
+    <None Include="wwwroot\images\sgpe.png" />
+    <None Include="wwwroot\images\sisgf.png" />
+    <None Include="wwwroot\images\tic.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.23" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.23">
       <PrivateAssets>all</PrivateAssets>
