Migration to DotNet 8 and migration from MySQL to SQL Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DTPContext": "server=localhost;user=root;password=1234;database=dtp"
+    "DTPContext": "Server=localhost;Database=DTP;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
